[gd_scene load_steps=19 format=4 uid="uid://cmgd1r4swujfb"]

[ext_resource type="Script" uid="uid://bniffhvsoy87t" path="res://Scripts/Salas/Room.gd" id="1_5b1u4"]
[ext_resource type="Script" uid="uid://bt35c1jxeefo7" path="res://Scripts/Salas/VisualPresset.gd" id="2_nw1na"]
[ext_resource type="Script" uid="uid://b4ytkmki4essk" path="res://Scripts/Salas/SoundPresset.gd" id="3_mwxe6"]
[ext_resource type="Script" uid="uid://dtykjwphodps4" path="res://Scripts/Salas/GeigerPresset.gd" id="4_8gkh4"]
[ext_resource type="Script" uid="uid://cqo01n7qjm3ey" path="res://Scripts/Salas/CopyPresset.gd" id="5_nyege"]
[ext_resource type="Script" uid="uid://bkcp80e0ixi8h" path="res://Scripts/Salas/GlitchPresset.gd" id="6_odr41"]
[ext_resource type="Script" uid="uid://bckhtsbm82wyu" path="res://Scripts/Salas/CreaturePresset.gd" id="7_fns34"]
[ext_resource type="PackedScene" uid="uid://borbalae6skib" path="res://Levels/Objetos/securityCamera.tscn" id="8_nw1na"]
[ext_resource type="Script" uid="uid://it2i1bujof5f" path="res://Scripts/Objetos/geiger_support.gd" id="9_8gkh4"]
[ext_resource type="Texture2D" uid="uid://ce3iqxwutg20l" path="res://Assets/Materiais/Texturas/GeigerSupport.png" id="9_mwxe6"]
[ext_resource type="FontFile" uid="uid://bcwrtlc6k62ir" path="res://Assets/Fonts/VCR_OSD_MONO_1.001.ttf" id="11_nyege"]

[sub_resource type="BoxShape3D" id="BoxShape3D_mwxe6"]
size = Vector3(3.1865234, 2.3720703, 4.2628784)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8gkh4"]
albedo_texture = ExtResource("9_mwxe6")

[sub_resource type="Shader" id="Shader_8gkh4"]
resource_local_to_scene = true
code = "shader_type spatial;
render_mode cull_front, unshaded;

uniform bool active = true;

uniform vec4 outline_color : source_color;
uniform float outline_width = 1.0;

void vertex() {
	// Se não estiver ativo, não altera o vertex → sem outline
	if (!active)
	{
		POSITION = PROJECTION_MATRIX * (MODELVIEW_MATRIX * vec4(VERTEX, 1.0));
	}
	else
	{
		vec4 clip_position = PROJECTION_MATRIX * (MODELVIEW_MATRIX * vec4(VERTEX, 1.0));
		vec3 clip_normal = mat3(PROJECTION_MATRIX) * (mat3(MODELVIEW_MATRIX) * NORMAL);

		vec2 offset = normalize(clip_normal.xy) / VIEWPORT_SIZE * clip_position.w * outline_width * 2.0;

		clip_position.xy += offset;

		POSITION = clip_position;
	}
}

void fragment() {
	ALBEDO = outline_color.rgb;
	if (outline_color.a < 1.0) {
		ALPHA = outline_color.a;
	}
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nyege"]
resource_local_to_scene = true
render_priority = 0
shader = SubResource("Shader_8gkh4")
shader_parameter/active = false
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/outline_width = 4.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_413qv"]

[sub_resource type="ArrayMesh" id="ArrayMesh_uinuh"]
_surfaces = [{
"aabb": AABB(-0.01, -0.024541324, -0.0022367046, 0.02, 0.04012327, 0.014601037),
"format": 34359742465,
"index_count": 540,
"index_data": PackedByteArray("CQAUACYAJgAUACcAFwAUAAkAJwAUABcAJgAoAAkAJwApACYAKAAmACoAKgAmACkAKQAnAAwAKgAVACgAKAAVACEACQAoACsAIQArACgAKwAsAAkACQAsABcALAArAC0ABwAVACoAIQAVAAcAKwAhAC4ALgAtACsABwAvACEAKgAwAAcALwAHADAAIQAvADEAMQAuACEAMAAyAC8AMQAvADIAMwAwACoANAAyADAAMAAzADQAMgA0ADUANgA0ADMANQA0ADYAKgAWADMAKQAWACoACAAzABYAMwAIADYAFgApADcADAA3ACkAFgA4AAgANwA4ABYAJQA2AAgACAA4ACUAOAA3AAsACwA3AAwACwAlADgANgAlADkAOQAlAAsAOQA6ADYANgA6ADUADAA7AAsAOgA5ADwADQA7AAwADAAnAA0AFwANACcACwA9ADkAPAA5AD0AEAALADsAOwANABAAPQALABAADQAXABoAGgAQAA0AGQAaABcAEAAaAA4APgAOABoAGgAZAD4ADgA/ABAAPwAOAD4AEAA/ABwAPgAcAD8AEAARAD0AHAARABAAFwAYABkAGAAXACwAGQAYAAoALABAABgACgAYAEAALQBAACwAEQAcAB4AQQBAAC0AQABBAAoALQBCAEEAQgAtAC4ACgBBAEMAQwBBAEIACgAbABkAPgAZABsAGwAKAEQAQwBEAAoAGwBFAD4AHAA+AEUARQAeABwARQAbAB0ARAAdABsAHQATAEUAHgBFABMARABDAAMAEwBGAB4AEgBGABMAHgBGABIAEwAdABIAHQBEAAUABQASAB0AAwAfAEQABQBEAB8ARwADAEMAHwADAEcAQwBIAEcAQgBIAEMARwBJAB8ASABCAEoALgBKAEIASwBHAEgASQBHAEsASgAiAEgASAAiAEsATAAiAEoASwAiAEwATQBKAC4ASgBNAEwALgAxAE0ATAAEAEsATQAxAE4AMgBOADEANQBOADIATgBPAE0ATABNAE8ATgA1AFAAUABPAE4ATwBRAEwABABMAFEATwBQACMAIwBRAE8AUgBQADUANQA6AFIAUwAjAFAAUABSAFMAPABSADoAIwBTAAEAUgA8ACQAJABTAFIAUQAjAFQAAQBUACMAVQABAFMAVAABAFUAUwAkAFUAVABWAFEAUQBWAAQASwAEAFYAVgBUAAAAVQAAAFQAVgAgAEsAAAAgAFYASwAgAEkAAABVAFcAVwBVACQAIAAAAFgAVwBYAAAAWABJACAAJAAGAFcABgAkADwAWABXAAIAAgBXAAYASQBYAFkAAgBZAFgAWQAfAEkAHwBZAAUAWQACAFoAWgAFAFkABgBaAAIAEgAFAFoAWgAGABIAPABbAAYAEgAGAFsAPQBbADwAWwAPABIADwBbAD0AEgAPAB4APQARAA8AHgAPABEA"),
"lods": [0.011924405, PackedByteArray("FAAVAAkAFQAUABYAFQAWAAgADAAWABQADAAIABYADAAUABcAFwAUAAkACwAIAAwAFwANAAwADAANAAsAGAAXAAkACAAHABUAFwAYABkADQAXABoAGQAaABcAGgAQAA0AEAALAA0AGgAZAA4AEAAaAA4AGQAYAAoACgAYAAkADgAZABsACgAbABkADgAcABAAGwATAA4AHAAOABMAEwAbAB0ACgAdABsAEwAeABwAHAARABAAEQAcAB4AEAARAAsAHgAPABEACwARAA8AHgATABIAEwAdABIAEgAPAB4ADwAGAAsABgAPABIABQASAB0AHQAKAAUABQAGABIABQAKAB8ABgAFAAIAHwACAAUAAwAfAAoACQADAAoAAgAfACAAAwAgAB8AIAAAAAIAAwAJACEACQAVACEAIQAVAAcAIQAiAAMAIAADAAQABAADACIABAAiACEAAAAgAAQAIQAHAAQAAAABAAIABAABAAAAAgABAAYAIwAEAAcABAAjAAEABwAIACMAJAAGAAEAIwAkAAEACwAGACQACAAlACMACwAlAAgAJAAjACUAJAAlAAsA"), 0.032218844, PackedByteArray("AAABAAIAAgADAAAABAABAAAAAAADAAQAAwACAAUAAgABAAYABgAFAAIAAQAEAAcABwAIAAEACQAEAAMABAAJAAcABQAKAAMACQADAAoACAALAAEABgABAAsADAAIAAcABwAJAAwACwAIAAwADAAJAA0ACgANAAkADAANAAsADQAKAA4ADwAGAAsADgAQAA0AEAALAA0ACwARAA8AEAARAAsABgAPABIAEgAPABEAEQAQABIABQAGABIACgATAA4AEwAKAAUAEAAOABMABQASABMAEwASABAA")],
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 92,
"vertex_data": PackedByteArray("CtcjPCjJs7ySZSc8CtcjPOMKybzFk0o8CtcjPER/FDzFk0o8CtcjPN09PTwtfxK7CtcjPOMKybwtfxK7I+sDPN09PTySZSc8I+sDPPEbIbzFk0o8CtcjvOMKybwtfxK7CtcjvOMKybzFk0o8CtcjvN09PTwtfxK7g0iWO2hLfzzDDJK5FEUHvO8bIbzFk0o8CtcjvER/FDzFk0o8I+sDvN09PTySZSc8I+sDvCjJs7x7iiy50YGfO7NsvrtXhyU8FEUHvO8bIbySZSc80YGfu7NsvrtXhyU8I+sDPO8bIbySZSc8I+sDPCjJs7x7iiy5CtcjvN09PTx7iiy5CtcjvCjJs7zvkRK7CtcjvCjJs7ySZSc8I+sDvN09PTx7iiy5Mbuou2hLfzzDDJK5hR6ku71r17vXUWi5I+sDvKS8DLx7iiy5L+WaO71r17vXUWi52oGfuyjJs7ySZSc8I+sDPKS8DLx7iiy52oGfOyjJs7ySZSc8CtcjPN09PTx7iiy5CtcjPCjJs7x7iiy5I+sDvCjJs7yYbBK7I+sDPCjJs7ytBxK7I+sDPOMKybySZSc8I+sDPCjJs7zFk0o8I+sDvCjJs7zFk0o8CtcjvKO8DLx7iiy5CtcjvN09PTySZSc8CtcjvKS8DLwtfxK7CtcjvO8bIbySZSc8CtcjvCjJs7x7iiy5I+sDvKS8DLwtfxK7I+sDvN09PTwtfxK7hR6ku71r17tBfxK72oGfuyjJs7ytlRK7I+sDvOMKybwtfxK7CtcjvOMKybx7iiy52oGfu+MKybwtfxK7I+sDvOMKybx7iiy5CtcjvOMKybySZSc8I+sDvOMKybySZSc82oGfu+MKybySZSc8I+sDvOMKybzFk0o8CtcjvO8bIbzFk0o8CtcjvCjJs7zFk0o80YGfuyjJs7zFk0o80YGfu+MKybzFk0o8I+sDvER/FDzFk0o80YGfOyjJs7zFk0o80YGfu7NsvruKtUg82oGfuyjJs7x7iiy5I+sDvCjJs7ySZSc8Mbuou2hLfzxBfxK7g0iWO2hLfzxBfxK7L+WaO71r17tBfxK7I+sDPN09PTxBfxK7I+sDPN09PTx7iiy52oGfOyjJs7x7iiy5I+sDPCjJs7ySZSc8CtcjPKO8DLw3fxK7I+sDPKS8DLxMfxK7CtcjPKS8DLx7iiy52oGfOyjJs7yEQxK7CtcjPCjJs7wtfxK7I+sDPOMKybwtfxK72oGfO+MKybwtfxK72oGfu+MKybx7iiy52oGfO+MKybx7iiy52oGfO+MKybySZSc8I+sDPOMKybx7iiy50YGfO+MKybzFk0o8I+sDPOMKybzFk0o8CtcjPOMKybySZSc8CtcjPCjJs7zFk0o8CtcjPOMKybx7iiy5CtcjPPEbIbzFk0o8CtcjPO8bIbySZSc8CtcjPN09PTySZSc8I+sDPER/FDzFk0o80YGfO7NsvruKtUg8")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_4mkkd"]
resource_name = "Cubo_001"
_surfaces = [{
"aabb": AABB(-0.01, -0.024541324, -0.0022367046, 0.02, 0.04012327, 0.014601037),
"attribute_data": PackedByteArray("tF9YP8hgSj8K2FE/+DNSPzOQUj9IrNg+8NR+Pzxiyj7cAn4/bG5SP4UeTD/mliU/GA9NPy4axD5O71Y/SKNzPqOLGj/2bSU/NPVAP6iWgT58KBA/uH1vPt84Gj80S8I+WuAUP7Ik1z4fRBU/eipSPyxMFT9OXX4/4c1RP05dfj+8w9E+XVdSP3l00D5UmMg+k/ioPNgNHD9jkgo52w0cP6v4qDxcm88+Rz31PfalOT95HnY+euW7PgsBjD5UpTk/6T/xPbWccD9AvL4+LJnPPkG8vj5ADBw/fTrJPkEMHD8ZBIw+E5xwP17BGT7KcHo/sud4PmRwej/jtsw9a/d/PzC2zD1SuHo/TIWVPpv2fz8fhZU+gbd6PyP+7T5QyS89pUGMPtBYxj6kQYw+YMkvPSf+7T7OWMY+bxrdPuyByD7kr9E+LXNKP7a4Dj+cTUo/FpwWPxAVgz5AwhA/VEKEPmL1JD/4n38+zVJWP5BShj5mKhs/L0hKPyT4Sz/cVEo/D/BLP+mvWD9eync/bItKP+SPeD++Rso+vXjkPqCquT4n/u0+oKq5PhLHlT6eqrk+kDb1PSQDGT85Whg+/hUUP4Ur9T0Ums8+5fcWPgTmuz5hgXc+qhUUP4UAjD6TAhk/Xb4ZProDUz+p5Xg+YgNTP73t3T74xCE/H03RPvfNIT/mdFA/eCSFPgINUT+AXHE+Ir93P09lUj9mDn4/55RKP7RfWD/IYEo/Ir93P09lUj+3Vlg/4jpSPxXfUT/6WUo/MAhSP/KgJT9Ji1g/TKwlP1ojWT9Ouck+MAhSP/KgJT+ACng/qB8iP2YOfj/nlEo/QE9+P3grIj9aI1k/TrnJPkBPfj94KyI/5I94P75Gyj5lSxU/3Bh4Px8xGz8rGHg/wzEbP5Zcfj9f1CQ/l1t+P8MxGz+WXH4/F9QkP3IXeD+uR0I/Z1t+P1/UJD+XW34/GEhCP6oXeD9Q0yQ/zKdYP0wsGz+2J1I/etMkPxwmUj//LRs/hKlYP2VLFT/cGHg/JUcVP1qrWD8WTUI/ZaxYP0wsGz+2J1I/JUcVP1qrWD8RT0I/3ytSP+3ySz9SMFI/JOlLP3dcfj+uR0I/Z1t+P/TpSz/NGHg/3dRRPy6yWD/FzlE/uBl4P93UUT8uslg/7fJLP1IwUj/FzlE/uBl4PyTpSz93XH4/D8eVPs5Yxj6kQYw+oKq5Pr145D7OWMY+D8eVPs5Yxj4Sx5U+nqq5PjJWpT6gqrk+MValPtBYxj57CxY/CDttPgINUT+AXHE+5nRQP3gkhT5SR0E/6ARsPjJWpT6gqrk+EseVPp6quT4Px5U+XMpwPkQGpj7IFl0+vXjkPqCquT67eOQ+WMpwPiX+7T5YynA+J/7tPqCquT7QvBk+0KU5P6RIFD/wP8M+a98aP9Kz1j6kQYw+oKq5PqVBjD5cynA+D8eVPlzKcD4Sx5U+nqq5PlRL3j7oa0o/YlzePjlQUj/kr9E+LXNKPx9N0T73zSE/ve3dPvjEIT9vGt0+7IHIPh1DDj8IB8g+p6kOPyJ1JT/cvg4/9C9SP2Jc3j45UFI/trgOP5xNSj/2NxU/sXAlP2Q/FT/tSUo/WuAUP7Ik1z72NxU/sXAlPx1DDj8IB8g+H0QVP3oqUj9kPxU/7UlKP0wsGz+2J1I/7fJLP1IwUj8V31E/+llKPwrYUT/4M1I/TCwbP7YnUj9mKhs/L0hKP13UJD92R0o/etMkPxwmUj8k+Es/3FRKPzAIUj/yoCU/Fd9RP/pZSj9kPxU/7UlKP/Y3FT+xcCU/ZiobPy9ISj8V31E/+llKP7dWWD/iOlI/CthRP/gzUj+jskw/ylHYPk8BUz/A+cQ+M5BSP0is2D4fRBU/eipSP9y+Dj/0L1I/ZD8VP+1JSj9VRwk5RMLbPqv4qDxcm88+kDb1PSQDGT+T+Kg82A0cPxgPTT8uGsQ+5nRQP3gkhT7NUlY/kFKGPk8BUz/A+cQ+p7y+PiilOT+kSBQ/8D/DPkDCED9UQoQ+FpwWPxAVgz7fOBo/NEvCPg5A9T3GA1M/Rz31PfalOT/QvBk+0KU5P6+Z1T7IFl0+v0nWPoBmkTu5eOQ+UMkvPbt45D5YynA+r5nVPsgWXT5EBqY+yBZdPla2pj6AZpE7v0nWPoBmkTu2wRk+5K9/PwzoeD5/r38/yeN4PnClOT8LAYw+VKU5P/oBjD4tA1M/Xb4ZProDUz/QvBk+0KU5P8njeD5wpTk/qeV4PmIDUz8RT0I/3ytSPxZNQj9lrFg/UNMkP8ynWD960yQ/HCZSPxFPQj/fK1I/y1FCP9hOSj8k+Es/3FRKP+3ySz9SMFI/etMkPxwmUj9d1CQ/dkdKP8tRQj/YTko/EU9CP98rUj/J43g+cKU5P4UAjD6TAhk/CwGMPlSlOT/QvBk+0KU5PzlaGD7+FRQ/YYF3PqoVFD/J43g+cKU5P5vp1D6gqrk+r5nVPsgWXT67eOQ+WMpwPr145D6gqrk+m+nUPqCquT4yVqU+oKq5PkQGpj7IFl0+r5nVPsgWXT4WnBY/EBWDPnsLFj8IO20++c4kP9j1aD409UA/qJaBPmL1JD/4n38++c4kP9j1aD5SR0E/6ARsPpvp1D7OWMY+m+nUPqCquT69eOQ+oKq5Pr145D7OWMY+MValPtBYxj4yVqU+oKq5Ppvp1D6gqrk+m+nUPs5Yxj45Whg+/hUUP2GBdz6qFRQ/YYF3PqoVFD95HnY+euW7PrQAjD4imc8+hQCMPpMCGT9BvL4+QAwcP4UAjD6TAhk/tACMPiKZzz6T+Kg82A0cP5A29T0kAxk/Rz31PfalOT+TPKk8yac5P3w6yT5CwNs+Qby+PkAMHD9AvL4+LJnPPqOLGj/2bSU/9jcVP7FwJT9a4BQ/siTXPmvfGj/Ss9Y+hR5MP+aWJT+jskw/ylHYPjOQUj9IrNg+MAhSP/KgJT+lQYw+XMpwPg3HlT5gyS89D8eVPlzKcD45Whg+/hUUP5A29T0kAxk/hSv1PRSazz7l9xY+BOa7Prt45D5YynA+uXjkPlDJLz0l/u0+WMpwPkQGpj7IFl0+D8eVPlzKcD4Nx5U+YMkvPVa2pj6AZpE7XsEZPspwej+2wRk+5K9/PwzoeD5/r38/sud4PmRwej9dvhk+ugNTP17BGT7KcHo/DkD1PcYDUz9ewRk+ynB6P12+GT66A1M/qeV4PmIDUz+y53g+ZHB6P7LneD5kcHo/qeV4PmIDUz/6AYw+LQNTP13UJD92R0o/ZiobPy9ISj+jixo/9m0lP6DQJD8JNRk/oNAkPwk1GT83h0I/vk4ZP8tRQj/YTko/XdQkP3ZHSj/LUUI/2E5KPzeHQj++Thk/hR5MP+aWJT8k+Es/3FRKPw=="),
"format": 34359742487,
"index_count": 540,
"index_data": PackedByteArray("EQAnAD4APgA/ABEABwAtAEAAQABBAAcAQgAxAEMAQwAEAEIARAAxAEUARQBGAEQARABHAEgASABJAEQAMQBEAEkAAgBKAEkASQBLAAIASQBMADEATQAxAEwATABOAE0ATABJAE8ATwAyAEwAUABMAFEAUQADAFAAUgBTAFQAVAAOAFIAVQBWAFMAUwBXAFUAWABZAFcAVwBaAFgAWwBXAFMAXABdAFsAWwBeAFwAUwBeAFsAXgBTAF8AXwBgAF4AVwBbAGEAYQBaAFcAYgBeAGMAYwANAGIAYQBkAGUAZQAwAGEAWgBhADAAZgBnAFoAWgBoAGYAMABoAFoAaAAwAGkAaQBqAGgAAQBrADAAMABsAAEAaABtAA8ADwBuAGgAbwAkAHAAcAA1AG8AJgBxADMAMwA0ACYAcgBzAHQAdAB1AHIAKgArAAoACgB2ACoAdwB4AAkACQB5AHcAegB7AHwAfAB9AHoAfgB/AIAAgACBAH4AggAVADYANgA3AIIADACDAAsACwCEAAwAhQCGAIcAhwCIAIUAiQCKABAAEAAoAIkAiQCLAIwAjACNAIkAjQCOAI8AjwCQAI0AiQCNAJAAkQCSAIkAiQCTAJEAkACTAIkAkwCQAJQAlACVAJMAlgCXAJAAkACYAJYAmQCaAC4ALgCbAJkAnAAvAJ0AnQCeAJwAnwCgAKEAoQCiAJ8AowAFAKQApAClAKMApgCnAAgACACoAKYAqQAAAKoAqgCrAKkArAAGAK0ArQCuAKwArwCwACkAKQCxAK8AsgAUABIAEgATALIAswA4ALQAtAC1ALMAtgC3ALgAuAC5ALYAGgC6ABcAFwA7ABoAuwC8AL0AvQC+ALsAvwDAAMEAwQA8AL8AwgDDAMQAxADFAMIAxgDHAMgAyADJAMYAygAdAB4AHgDLAMoAPQDMAM0AzQDOAD0AzwDQANEA0QDSAM8A0wDUANUA1QDWANMA1wDYANkA2QDaANcA2wDcAN0A3QDeANsA3wA6AOAA4ADhAN8A4gDjAOQA5ADlAOIA5gDnAOgA6ADpAOYA6gDrAOwA7ADtAOoALADuAO8A7wDwACwA8QDyAPMA8wD0APEA9QD2APcA9wD4APUA+QD6APsA+wD8APkA/QA5ABYAFgD+AP0A/wAAAQEBAQECAf8AGQADAQQBBAEFARkABgEHAQgBCAEJAQYBCgEbAAsBCwEMAQoBDQEOAQ8BDwEQAQ0BEQESARMBEwEUAREBFQElABYBFgEXARUBGAEZARoBGgEbARgBHAEdASMAIwAeARwBHwEgASEBIQEiAR8BIAAjASQBJAEfACAAIgAhACUBJQEmASIAJwEoARgAGAApAScBKgErASwBLAEtASoBHAAuAS8BLwEwARwAMQEyATMBMwE0ATEBNQE2ATcBNwE4ATUBOQE6ATsBOwE8ATkB"),
"lods": [0.011924405, PackedByteArray("JwAoABEAKAAnACkADAApACcAKAApAA0ADAANACkADQAQACgACAANAAwADAALAAgAKgALAAwADAArACoAKgArAAoALAAqAAoACQAsAAoACgAHAAkABwAtAAkABgAJAC0ALQACAAYABQAGAAIACAAuAA0ACAAFAC8ALwAuAAgADQAuADAALwAwAC4ADgANADAAMAAPAA4ADwAwAAEAMAAvAAEALwAFAAEAAgABAAUAAAABAAIABAABAAAAMQAAAAIAAAAxAAQAAgAyADEAMQADAAQAAwAxADIAMwA0ACYAIwA0ADMAMwAmACQAJQAjADMAJAA1ADMAMwA1ACUAJAAlADUANgA3ABUANwA2ADgAOAA5ADcAFAA4ADYANwA5ABYANgASABQAEgATABQAEgA2ABUAFgA6ADcAFQA3ADoAFgA7ADoAOwAWABkAGQAaADsAGQAbABoAFwA7ABoAFwA6ADsAOgAXABUAPAAVABcAFQA8ABgAPAAdABgAFwA9ADwAHQA8AD0APQAXABwAHAAeAD0APQAeAB0AHwAdAB4AIAAdAB8AHgAhAB8AIQAeACIA"), 0.032218844, PackedByteArray("AAABAAIAAgADAAAAAAADAAQABAABAAAAAgABAAUABQAGAAIABwACAAYABQABAAgABgAJAAcACgAHAAkACQALAAoADAAKAAsADAALAAgADQAIAAEACAANAAwADgANAAEAAQAPAA4ADAANABAAEAARAAwAEgATABQAFQASABQAFAAWABUAFgAXABUAGAAVABcAFwAWABkAGQAaABcAGQAbABoAFwAcABgAHQAYABwAHAAeAB0AHwAdAB4AIAAdAB8AHgAhAB8AIQAeACIAIwAkACUAJAAjACYA")],
"material": SubResource("StandardMaterial3D_413qv"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 317,
"vertex_data": PackedByteArray("CtcjPCjJs7ySZSc8CtcjPOMKybzFk0o8CtcjPER/FDzFk0o8CtcjPN09PTwtfxK7CtcjPOMKybwtfxK7I+sDPPEbIbzFk0o8I+sDPN09PTySZSc8CtcjPN09PTwtfxK7FEUHvO8bIbzFk0o8g0iWO2hLfzzDDJK5CtcjvN09PTwtfxK7I+sDvN09PTySZSc8CtcjvER/FDzFk0o8CtcjvOMKybzFk0o8CtcjvOMKybwtfxK7CtcjPOMKybwtfxK7CtcjvOMKybwtfxK7CtcjvN09PTwtfxK7FEUHvO8bIbySZSc8FEUHvO8bIbzFk0o8I+sDvN09PTySZSc8I+sDvCjJs7x7iiy5g0iWO2hLfzzDDJK5I+sDPCjJs7x7iiy5FEUHvO8bIbySZSc8I+sDPN09PTySZSc8I+sDPO8bIbySZSc8I+sDPPEbIbzFk0o8I+sDPO8bIbySZSc80YGfu7NsvrtXhyU80YGfO7NsvrtXhyU8FEUHvO8bIbzFk0o8FEUHvO8bIbySZSc8I+sDPPEbIbzFk0o8I+sDPO8bIbySZSc8CtcjvN09PTwtfxK7CtcjPOMKybwtfxK7CtcjPN09PTwtfxK7CtcjvOMKybwtfxK7CtcjvN09PTx7iiy5CtcjvCjJs7zvkRK7CtcjvCjJs7ySZSc8I+sDvN09PTx7iiy5CtcjvN09PTx7iiy5Mbuou2hLfzzDDJK5CtcjPN09PTx7iiy5I+sDvCjJs7zFk0o8I+sDPCjJs7zFk0o8I+sDPOMKybySZSc8CtcjPCjJs7x7iiy5CtcjPN09PTx7iiy5I+sDvCjJs7yYbBK7CtcjvCjJs7zvkRK7I+sDPCjJs7ytBxK7I+sDvKS8DLx7iiy5hR6ku71r17vXUWi5I+sDvN09PTx7iiy5Mbuou2hLfzzDDJK5L+WaO71r17vXUWi5I+sDPKS8DLx7iiy52oGfuyjJs7ySZSc82oGfOyjJs7ySZSc8CtcjvKO8DLx7iiy5CtcjvKS8DLwtfxK7I+sDPN09PTx7iiy5I+sDPN09PTxBfxK7CtcjPOMKybx7iiy5CtcjPCjJs7wtfxK7CtcjPCjJs7ySZSc8CtcjPOMKybx7iiy5CtcjPOMKybySZSc8CtcjPCjJs7zFk0o8CtcjPPEbIbzFk0o8CtcjPO8bIbySZSc8CtcjPN09PTySZSc8CtcjPPEbIbzFk0o8CtcjPKS8DLx7iiy5CtcjPCjJs7wtfxK7CtcjPKO8DLw3fxK7CtcjPN09PTySZSc8CtcjPKO8DLw3fxK7CtcjPN09PTx7iiy5CtcjvOMKybx7iiy5I+sDvOMKybx7iiy5I+sDvOMKybwtfxK72oGfu+MKybwtfxK7I+sDvOMKybwtfxK72oGfu+MKybx7iiy52oGfO+MKybwtfxK72oGfu+MKybwtfxK72oGfO+MKybx7iiy52oGfu+MKybySZSc8I+sDvOMKybzFk0o80YGfu+MKybzFk0o8I+sDvOMKybySZSc8CtcjvOMKybx7iiy5CtcjvOMKybySZSc82oGfO+MKybySZSc8I+sDvOMKybzFk0o8CtcjvOMKybySZSc80YGfO+MKybzFk0o8I+sDPOMKybzFk0o8I+sDPOMKybwtfxK72oGfO+MKybwtfxK7I+sDPOMKybx7iiy5CtcjPOMKybySZSc8CtcjPOMKybx7iiy5CtcjPOMKybySZSc8I+sDPOMKybzFk0o8CtcjPOMKybx7iiy5I+sDPOMKybwtfxK7I+sDPOMKybwtfxK7CtcjPCjJs7wtfxK7I+sDvOMKybwtfxK7I+sDPOMKybwtfxK7I+sDPCjJs7ytBxK72oGfOyjJs7yEQxK72oGfO+MKybwtfxK7I+sDvN09PTwtfxK7I+sDPN09PTxBfxK7I+sDPN09PTx7iiy5g0iWO2hLfzxBfxK72oGfOyjJs7yEQxK7I+sDPCjJs7ytBxK7I+sDPKS8DLxMfxK7L+WaO71r17tBfxK7I+sDvCjJs7yYbBK7I+sDvKS8DLwtfxK7CtcjvKS8DLwtfxK7CtcjvCjJs7zvkRK72oGfuyjJs7x7iiy5CtcjvN09PTySZSc8I+sDvER/FDzFk0o8CtcjPCjJs7wtfxK7CtcjPKO8DLw3fxK7I+sDPKS8DLxMfxK7I+sDPCjJs7ytBxK7CtcjvCjJs7x7iiy5CtcjvOMKybx7iiy5CtcjvCjJs7zvkRK7CtcjvKS8DLwtfxK7CtcjvKO8DLx7iiy5CtcjvN09PTx7iiy5CtcjvN09PTySZSc8CtcjvO8bIbySZSc8CtcjvOMKybySZSc8CtcjvOMKybx7iiy5CtcjvCjJs7ySZSc8CtcjvO8bIbzFk0o8CtcjvCjJs7zFk0o8CtcjvER/FDzFk0o8CtcjvO8bIbzFk0o8CtcjvN09PTySZSc8CtcjvOMKybzFk0o8CtcjvCjJs7zFk0o8I+sDvOMKybzFk0o8I+sDPOMKybzFk0o8CtcjPCjJs7zFk0o8CtcjPOMKybzFk0o8I+sDvOMKybzFk0o8I+sDvCjJs7zFk0o80YGfuyjJs7zFk0o80YGfu+MKybzFk0o8I+sDPCjJs7zFk0o8CtcjPPEbIbzFk0o8CtcjPCjJs7zFk0o8CtcjvCjJs7zFk0o8CtcjvO8bIbzFk0o8I+sDvCjJs7zFk0o8CtcjPCjJs7zFk0o8CtcjPOMKybySZSc8CtcjPOMKybzFk0o8I+sDPER/FDzFk0o8CtcjPN09PTySZSc8CtcjPER/FDzFk0o8CtcjvOMKybzFk0o8CtcjvOMKybySZSc8CtcjvCjJs7zFk0o8I+sDvER/FDzFk0o8I+sDvN09PTySZSc8I+sDvKS8DLx7iiy5FEUHvO8bIbySZSc8I+sDPN09PTySZSc8I+sDPN09PTx7iiy5CtcjPN09PTx7iiy5CtcjPN09PTySZSc8I+sDPCjJs7ySZSc8CtcjvN09PTySZSc8CtcjvN09PTx7iiy5I+sDvN09PTx7iiy5I+sDvN09PTySZSc8I+sDvCjJs7ySZSc8I+sDvCjJs7x7iiy52oGfuyjJs7x7iiy5hR6ku71r17tBfxK7Mbuou2hLfzxBfxK7I+sDvN09PTwtfxK7I+sDvKS8DLwtfxK7hR6ku71r17tBfxK7L+WaO71r17tBfxK7g0iWO2hLfzxBfxK7Mbuou2hLfzxBfxK70YGfu7NsvruKtUg80YGfO7NsvruKtUg82oGfOyjJs7x7iiy5I+sDPCjJs7x7iiy5I+sDPCjJs7ySZSc82oGfuyjJs7ySZSc82oGfuyjJs7x7iiy52oGfOyjJs7x7iiy52oGfOyjJs7ySZSc80YGfO+MKybzFk0o82oGfO+MKybySZSc82oGfu+MKybySZSc80YGfu+MKybzFk0o80YGfO+MKybzFk0o80YGfOyjJs7zFk0o8I+sDPCjJs7zFk0o8I+sDPOMKybzFk0o80YGfu+MKybzFk0o80YGfuyjJs7zFk0o80YGfOyjJs7zFk0o80YGfO+MKybzFk0o82oGfOyjJs7x7iiy5I+sDPKS8DLx7iiy5I+sDPCjJs7x7iiy52oGfuyjJs7x7iiy5hR6ku71r17vXUWi5L+WaO71r17vXUWi52oGfOyjJs7x7iiy52oGfuyjJs7ytlRK7hR6ku71r17tBfxK7I+sDvKS8DLwtfxK7I+sDvCjJs7yYbBK72oGfuyjJs7ytlRK72oGfOyjJs7yEQxK7L+WaO71r17tBfxK7hR6ku71r17tBfxK7I+sDvN09PTx7iiy5I+sDvN09PTwtfxK7Mbuou2hLfzxBfxK7g0iWO2hLfzzDDJK5Mbuou2hLfzzDDJK5Mbuou2hLfzxBfxK7g0iWO2hLfzxBfxK72oGfu+MKybwtfxK72oGfuyjJs7ytlRK7I+sDvCjJs7yYbBK7I+sDvOMKybwtfxK72oGfO+MKybwtfxK72oGfOyjJs7yEQxK72oGfuyjJs7ytlRK72oGfu+MKybwtfxK7hR6ku71r17vXUWi5L+WaO71r17vXUWi5L+WaO71r17vXUWi5g0iWO2hLfzzDDJK5I+sDPN09PTx7iiy5I+sDPKS8DLx7iiy5I+sDPO8bIbySZSc8I+sDPKS8DLx7iiy5I+sDPN09PTx7iiy5FEUHvO8bIbySZSc8I+sDvKS8DLx7iiy5I+sDvCjJs7x7iiy5I+sDvCjJs7ySZSc8I+sDPER/FDzFk0o8I+sDPO8bIbySZSc8I+sDPN09PTySZSc8FEUHvO8bIbzFk0o8CtcjvO8bIbzFk0o8CtcjvER/FDzFk0o8I+sDvER/FDzFk0o8I+sDPPEbIbzFk0o8I+sDPER/FDzFk0o8CtcjPER/FDzFk0o8CtcjPPEbIbzFk0o8CtcjPKO8DLw3fxK7I+sDPN09PTxBfxK7I+sDPKS8DLxMfxK7hR6ku71r17vXUWi5I+sDvKS8DLx7iiy5I+sDvN09PTx7iiy5Mbuou2hLfzzDDJK5I+sDvKS8DLwtfxK7I+sDvN09PTwtfxK7CtcjvKS8DLwtfxK7L+WaO71r17tBfxK7I+sDPKS8DLxMfxK7I+sDPN09PTxBfxK7g0iWO2hLfzxBfxK70YGfu7NsvrtXhyU80YGfu7NsvruKtUg80YGfO7NsvruKtUg80YGfO7NsvrtXhyU82oGfuyjJs7ySZSc80YGfu7NsvrtXhyU8I+sDvCjJs7ySZSc80YGfu7NsvrtXhyU82oGfuyjJs7ySZSc82oGfOyjJs7ySZSc80YGfO7NsvrtXhyU80YGfO7NsvrtXhyU82oGfOyjJs7ySZSc8I+sDPCjJs7ySZSc80YGfuyjJs7zFk0o8I+sDvCjJs7zFk0o8FEUHvO8bIbzFk0o80YGfu7NsvruKtUg80YGfu7NsvruKtUg80YGfO7NsvruKtUg80YGfOyjJs7zFk0o80YGfuyjJs7zFk0o80YGfOyjJs7zFk0o80YGfO7NsvruKtUg8I+sDPPEbIbzFk0o8I+sDPCjJs7zFk0o8////f3n///+pqlRV59/+3wWyJJUv6UjmU9VU1ZYfM5BZ1aIqTSAe8MN4zpHs9RPB2U/GtsW/k9hU1VXVAMCCrbaHJJI+/tW6CZn5tj3G/6mqKlPVC9v/3y2wf7Yhz76f+E0jlXW/5sZUVVRV/r/zr6sqpyoG4ACgWNWiKgjA9s+rKqgqNmDjr6kqVNWqX9TPOu2KvwsNcJa2hyWStLFa7yywf7YQ6Wb2nKqvqgbgBqAKmfq2sekdqyFVm6oDoBawO+2Jv4KufrPaT8W2kJPetDcSOsAIUo/Gw3jPkVSgMJg5EjrAO+gu6FA2luaY6SXVH8rN5ZrUhLS4hySSI8PQ5Tvtir/RijIcwnjPkbWykqA4EjnAxLaZeqsqVdX+P/+vVtWhKvUfBKBV1VPVACD/36oqqSr+PwHQ/z8AwI5/x78AAPg/Q0C1vwAA/3//f9O/DIddyijwrbn+P/+/LroX3a1krbUF0U3fAMD/v9TFFJ15gCGA0P+qv4J/IIAT/zbA/38AANH//7////9/RP////6//7+PALj/AAAAAAAA/78AAPk/+j//vxYA6f8VAP+/DcAugM3/4J9agUyA+/9PvwyHX8qx0MH9q2SttRXT+MvNfkqAzP7/v6E/G4CEv/C/LcD///7//79rwIH/BP/BvwAA/3//f6O/AAACwFdApb+9d4rLGvJuyFrVa+z03Vu3/7/+P5//0P/2/xLAtQAk4P///39c/////r//P6n/0///v/4/qP/U//6/AIB4/yDg/r/+fyj/NOD///9/J////ySwxrZT6XD2/r8AgCD/NuD///9/D/////T/E8C5ACXg/v/3P/AAN+AlsMa2ZOln9v3/9j/yADfg/78AwIgAuf/+P/8/BsD7n/9/AAD//wXA/j8AAPj/BsD9PwAA+v8EwADAAAD3/wXA/38AAP//AMAMwAYA8v8CwP0/AQD9//2//38AAPX//7//fwAA//8CwACAAED0//S//n8AQPP/9L//fwAA//8MwP8/AEAHwPuf/j//PxPA9Z//fwAA2f//v/5/AEDm/+e//z8AQBXA858AgABAxP8OwP5/AEDM/wvA7D8KAO3/9b8MwAUA8P/+v/9/AADt//+/AMD/P+e/89//vwBA9b/63/+/AEDmv/PfAIAAQK//E8AAwP8/9L/63+s/CgDq//S/7T8KAD4A9L/1/xLACQD63/+/AQABAP2/7T8KABYAC8AYAOr/FAD/v+//8v8AAAXADcAJAAkA9b+RKDXr2+7E0VrVauwhyumbvXeKy+fLALlAyd3mstFgnu3/8v8AAAXAFQDq/xQA/78GAAoACgD/v/3/AgAAAP2/AAADAAMA/78AAPv/AwD/vwAA/T/+P/+/AAAFwPo//r/1fxHAwf8ywNlPxrZbvF/UbrLLlDbrZp70/xLACgD63/z/9z8CAAKgBgAJAAkA/78WAOj/FgD/vwAA/3//f76//z/+P0aA2r8AAPg/QkC1vwAAAsBWQKW/AAD/f/9/tb8AQP+/hX/Bv9pPxbZGk7y0AAD/f/9/zb//P/4/PIDgvwBA/z9BgN+/AAD/f/9/yr8AQP5/1b/UvwBAAIDbv9q/+E0ilYmzqrQAQACA1L/Tv9lPxrYuk7K0VVVUVQDA9a//P/5/67/sv/5//z/g/+G/AID/P5//F8D/v/5/mf8Y4KqqVVXh3//fAID/P/n/+L95gCGA9f+9v3iAWoDu/7q//n//P/P/9L+CfyCACf87wP+//n8t/zPg/78AgJH/GuD/PwCA67/rv/8//n/dv92/eYAhgNn/r7/+v/5/ef8g4P6//z+8/9z/qqpUVTLgGJD4TSOV8rypyiWwxrYu1mWeBrIila3wep9UVVVVIqDtzwBA/z81gOS/AED+f9u/279sssyUEOoJ5i2wf7bz6ev1DMAugNX/G+A87Yq/iw1LltlPxbbwv8nYvHeKyw7ygcj/v/6/scUlnSWwxbaw1kqexSq21QZgKtDZT8W2bbx01P8//r8zuhndDYddykvws7ktsH62Qs7qnwLV0tWMwBuwnaqvqgXgBqBDgPS/uf+7vwAAAAAAAP+/dTWb5AEtCrSRKDbrSyKCuQAAAAAAAP+//////wAA/7//////AAD/v0DJ3OZMFvLUdjWc5AEtCrScZuC2w9VJyzGaa7bR6FKq/38VwP3//r8gVZqqxL8R0MUqtdVE4MjflT+G/4b/dsD/fxbA/P/+v7x/9L96/yDALcD///3//7/+fwBA6v8DwP9/AADr//+//38AAOb//78AgABA5v8FwACA/z+2/xHAgn9agDL/J8CCfyCAPf8hwP5//z/E/w3AAID/P9//B8B4gFqA3/9LwIJ/WoBn/wzA/n//P+b/BcC8f/W/eP8GwJ8/G4CDvw3AIFWaqsO/EdBEgPW/uf+6v1iBTID8/1G/zX5KgMv+/r9qf8y/1v5JwAIA/P8CAP+/AAABAAIA/78AAP3/AgD/v/7/BQAAAPy/AgD9/wEA/7/r//L/AAD4v/z/CAAAAPu/AAACAAIA/78Lh17KR+yk3pAoNuvysuLcdTWc5Ea5XdgJmfm2AusOq6pkq7U4073MdTWc5JLpj9ZAydzmN9YxtP4/AAAQAPu/AgD8/wIA/7/+/wYAAAD8vwBAAAABAP+/C8AFAAEABsDq/+3/AAAHwAIA/P8CAP+//j8CAAQAAMBZgUyA/P9Qv81+SoDL/v6/zX5KgMz+/78Jmfu2Negwq713ist+8OLDnz8bgIO/DcA5EjrACVKQxqA/GoCEv/G/vXeLy+yEdKk77Yq/ZQ1WlgzALIDY/xrgnaquql/gyu8B1dHVaSDij/hNIpUItAG1ORI6wAlSkMbZT8a2jpPetLaHJJL5/bu6/z8AgN6/3r/5TSSVHr9ox22yy5Q762eew3jNkcr1KcH5TSSVSb0nygeyIpWY8Haf/78AgCf/NeD+/wbAAAD831rVauztDG7QCAANAA0A/79ZgUyA+/9Qvw3ALYDO/+CfDIdeyuv5KLmsZK61P9PVzP////8AAP+/kig360oigrkAAADA/j/+vwAA/v8AAP+/BQAJAAkA/79Z1Wvs7Axt0D/J3eZLFvHUUDaX5o3A6tadZuC2lNKR3zCabLZgv86oIMrN5TLRiZ+WP4b/6f93wFA2lubT6jPVAtXR1YvAG7BQNpbmmekl1SvA/v/9//+/acCC/wb/wb8eys3lmtSEtB7KzeV/1Cu1psAG/xL+tr/GKrbVRODH33iAWoD8/8G/eYAhgPX/vb+2hySSA/8gu51m4bbl1e7LnWbhtsfVV8symmu29uhPqoJ/WYBG/xzAeIBagN//S8CCf1mAGv8ywDGabLbM516qw3jOkU321MCCfyCAMv8mwA==")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_uinuh")

[node name="Room" type="Node" node_paths=PackedStringArray("camera", "geiger_support")]
script = ExtResource("1_5b1u4")
camera = NodePath("CAMERA")
geiger_support = NodePath("GeigerSupport")

[node name="CAMERA" parent="." instance=ExtResource("8_nw1na")]

[node name="VisualPresset" type="Node" parent="."]
script = ExtResource("2_nw1na")

[node name="SoundPresset" type="Node" parent="."]
script = ExtResource("3_mwxe6")

[node name="GeigerPresset" type="Node" parent="."]
script = ExtResource("4_8gkh4")

[node name="CopyPresset" type="Node" parent="."]
script = ExtResource("5_nyege")

[node name="GlitchPresset" type="Node" parent="."]
script = ExtResource("6_odr41")

[node name="CreaturePresset" type="Node" parent="."]
script = ExtResource("7_fns34")

[node name="GeigerSupport" type="Area3D" parent="." node_paths=PackedStringArray("room", "mesh_with_outline", "hint_label")]
transform = Transform3D(0.125, 0, 0, 0, -5.4639235e-09, -0.125, 0, 0.125, -5.4639235e-09, -0.381, 2.2, -0.699)
collision_layer = 2
script = ExtResource("9_8gkh4")
room = NodePath("..")
mesh_with_outline = NodePath("Cubo_001")
hint_label = NodePath("HintLabel")

[node name="CollisionShape3D" type="CollisionShape3D" parent="GeigerSupport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.68603516, 0.43136597)
shape = SubResource("BoxShape3D_mwxe6")

[node name="Cubo_001" type="MeshInstance3D" parent="GeigerSupport"]
transform = Transform3D(131.69885, 0, 0, 0, -1.1920929e-05, 99.99999, 0, -99.99999, -1.1920929e-05, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_8gkh4")
material_overlay = SubResource("ShaderMaterial_nyege")
mesh = SubResource("ArrayMesh_4mkkd")
skeleton = NodePath("")

[node name="HintLabel" type="Label3D" parent="GeigerSupport"]
transform = Transform3D(2.36, 0, 0, 0, 2.36, 0, 0, 0, 2.36, 0, 0, -1.8415833)
visible = false
sorting_offset = 0.2
billboard = 1
no_depth_test = true
text = "Pressione botão esquerdo"
font = ExtResource("11_nyege")
